--- a/app/src/main/res/layout/listviewholder.xml
+++ b/app/src/main/res/layout/listviewholder.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:text="@string/food"
         android:textColor="#000"
         android:textSize="20sp" />
 </LinearLayout>
